# PICO-PICO2-compile-flash-tool-PicoBuild

./: README.md
PicoBuild/: CMakeLists.txt  CMakeLists_1.txt  languagemanager.cpp  languagemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  projectconfigdialog.cpp  projectconfigdialog.h  resources.qrc  resources.rc
